--- a/env.local/env.example
+++ b/env.local/env.example
@@ -1,3 +1,3 @@
 # Copy this file to .env.local and fill in your credentials.
-GOOGLE_CSE_API_KEY="your-google-custom-search-api-key"
-GOOGLE_CSE_SEARCH_ENGINE_ID="your-search-engine-id"
+GOOGLE_CSE_API_KEY="AQ.Ab8RN6K1GOsjr4Fa_WmBMQ8C8QwWYfiHvKh20-Hpo9NdEfIDbA"
+GOOGLE_CSE_SEARCH_ENGINE_ID="f09c8e40b75164424"
