--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "tls": false
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "15.1.6",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.1.6",
+    "@next/eslint-plugin-next": "^16.0.8",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.8",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.5.3"
   }
