--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@genkit-ai/googleai": "^1.5.0",
     "cookies-next": "^5.1.0",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.4.0",
     "genkit": "^1.5.0",
     "next": "^15.2.0",
     "react": "^19.2.1",
